src/test/ui/generator/issue-48048.stderr
error[E0626]: borrow may still be in use when generator yields
  --> $DIR/issue-48048.rs:19:9
   |
19 |         x.0({ //~ ERROR borrow may still be in use when generator yields
   |         ^^^
20 |             yield;
   |             ----- possible yield occurs here

error: aborting due to previous error

